auto generate spring applicationContext

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
+projectDirectory=/home/battlecall/Workspaces/myeclipse/cagf
 web=WebRoot
 classes=${web}/WEB-INF/classes
 #jar package
@@ -6,3 +7,7 @@ dbconfig=dbconfig
 src=src
 rootPath=/home/battlecall/bc_cagf/sourcecode
 dbschema=dbschema
+springConfigLocation=${web}/WEB-INF
+infrastructureXmlName=applicationContext-infrasture.xml
+dbProperty=db.properties
+hibernateProperty=hibernateProperty.properties
