--- a/build.properties
+++ b/build.properties
@@ -7,7 +7,11 @@ dbconfig=dbconfig
 src=src
 rootPath=/home/battlecall/bc_cagf/sourcecode
 dbschema=dbschema
+
+
 springConfigLocation=${web}/WEB-INF
 infrastructureXmlName=applicationContext-infrasture.xml
 dbProperty=db.properties
 hibernateProperty=hibernateProperty.properties
+#dao
+daoXmlName=applicationContext-dao.xml
