--- a/build.properties
+++ b/build.properties
@@ -15,3 +15,4 @@ dbProperty=db.properties
 hibernateProperty=hibernateProperty.properties
 #dao
 daoXmlName=applicationContext-dao.xml
+serviceXmlName=applicationContext-service.xml
