--- a/build.properties
+++ b/build.properties
@@ -16,3 +16,4 @@ hibernateProperty=hibernateProperty.properties
 #dao
 daoXmlName=applicationContext-dao.xml
 serviceXmlName=applicationContext-service.xml
+actionXmlName=applicationContext-action.xml
