--- a/build.properties
+++ b/build.properties
@@ -17,3 +17,4 @@ hibernateProperty=hibernateProperty.properties
 daoXmlName=applicationContext-dao.xml
 serviceXmlName=applicationContext-service.xml
 actionXmlName=applicationContext-action.xml
+strutsXmlName=struts.xml
