--- a/build.xml
+++ b/build.xml
@@ -91,6 +91,12 @@
     		<arg line="${hibernate.mapping}"/>
     	</java>
     	
+    	<!-- do compile -->
+    	<!-- action中用到反射，需要获取到Class-->
+		<javac srcdir="${src}" destdir="${classes}" nowarn="on" debug="${java.debug}" 
+			classpathref="ant.run.lib.path">
+		</javac>
+    	
     	<!-- generate action -->
     	<java classname="com.cagf.tool.hbm2action.CodeGenerator" fork="true" failonerror="true">
     	    		<classpath refid="ant.run.lib.path"></classpath>
@@ -107,6 +113,26 @@
 			<arg line="--projectDirectory=${projectDirectory}"/>
 			<arg line="${hibernate.mapping}"/>
 		</java>	
+    	
+		<!-- generating struts.xml -->
+		<java classname="com.cagf.tool.hbm2xml.struts.CodeGenerator" fork="true" failonerror="true">
+			<classpath refid="ant.run.lib.path"></classpath>
+			<arg line="--output=${src}"/>
+			<arg line="--filename=${strutsXmlName}"/>
+			<arg line="--projectDirectory=${projectDirectory}"/>
+			<arg line="${hibernate.mapping}"/>
+		</java>
+    	
+    	<java classname="com.cagf.tool.hbm2jsp.CodeGenerator" fork="true" failonerror="true">
+			<classpath refid="ant.run.lib.path"></classpath>
+			<arg line="--output=${projectDirectory}/${web}"/>
+			<arg line="--rootpath=${rootPath}"/>
+			<arg line="${hibernate.mapping}"/>
+		</java>
+    	
+    	<javac srcdir="${src}" destdir="${classes}" nowarn="on" debug="${java.debug}" 
+    				classpathref="ant.run.lib.path">
+		</javac>
     </target>
 
 
