--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,12 @@
-projectDirectory=/home/battlecall/Workspaces/myeclipse/cagf
+projectDirectory=/home/battlecall/github/cagf
 web=WebRoot
-classes=${web}/WEB-INF/classes
+classes=out
+#${web}/WEB-INF/classes
 #jar package
 lib=${web}/WEB-INF/lib
 dbconfig=dbconfig
 src=src
-rootPath=/home/battlecall/bc_cagf/sourcecode
+rootPath=/home/battlecall/sourcecode
 dbschema=dbschema
 
 
